# clapack

./: CMakeLists.txt  arith-arm64-v8a.h  arith-armeabi-v7a.h  arith-x86.h  arith-x86_64.h  fpu_control-arm64-v8a.h  fpu_control-armeabi-v7a.h  fpu_control-x86.h
F2CLIBS/libf2c/: CMakeLists.txt  sysdep1.h
